fix: avoid clipping the tooltip
Fixes BUGSENG/vscode-zephyr-workbench#31 .

--- a/src/webview/style.css
+++ b/src/webview/style.css
@@ -536,10 +536,7 @@ vscode-button {
 }
 
 .rich-tooltip-content {
-  position: absolute;
-  top: calc(100% + 6px);
-  left: 50%;
-  transform: translateX(-50%);
+  position: fixed;
   width: 280px;
   max-width: 90vw;
   border-radius: 6px;
@@ -562,22 +559,6 @@ vscode-button {
   visibility: visible;
   pointer-events: auto;
   transition: opacity 0.5s ease;
-}
-
-@media screen and (max-width: 400px) {
-  .rich-tooltip-content {
-    right: 0;
-    left: auto;
-    transform: translateX(-10%);
-  }
-}
-
-@media screen and (max-width: 300px) {
-  .rich-tooltip-content {
-    left: 0;
-    right: auto;
-    transform: translateX(10%);
-  }
 }
 
 .tooltip[data-tooltip]:hover::after {
